[tool.poetry]
name = "bootcamp-06-5"
version = "0.1.0"
description = ""
authors = ["Nathan Vinicius <linuxinicius195@gmail.com>"]
readme = "README.md"
package-mode = false  # <--- ADICIONE ESTA LINHA

[tool.poetry.dependencies]
python = ">=3.13"
pandas = "^2.0.0"
pandera = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"